first basic tests run green again, bulk change of access to the modification analyzer in tests